Added HTML and CSS

--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Ironhacking</title>
     <link rel="stylesheet" href="styles/style.css" />
-    <script type="text/javascript" src="./js/monster.js"></script>
-    <script type="text/javascript" src="./js/player.js" defer></script>
-    <script type="text/javascript" src="./js/game.js" defer></script>
-    <script type="text/javascript" src="./js/script.js" defer></script>
+    <title>Ironhack Samurai</title>
   </head>
   <body>
     <div id="game-intro">
-      <img src="./images/background.png" alt="background" />
-      <button id="start-button"></button>
+      <img src="./images/backdrop.png" alt="backdrop" />
+      <img
+        class="title-ironhack"
+        src="./images/ironhack.png"
+        alt="ironhack title"
+      />
+      <img
+        class="title-samurai"
+        src="./images/samurai.png"
+        alt="samurai title"
+      />
+      <button class="start-button"></button>
+      <img
+        class="samurai"
+        src="./images/character/left/idle_0_left.png"
+        alt="idle samurai"
+      />
     </div>
 
     <div id="game-container">
