--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         src="./images/samurai.png"
         alt="samurai title"
       />
-      <button class="start-button"></button>
+      <button id="start-button"></button>
       <img
         class="samurai"
         src="./images/character/left/idle_0_left.png"
