Added player animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="game-intro">
-      <img src="./images/backdrop.png" alt="backdrop" />
+      <img src="./images/backdrop-menu.png" alt="backdrop menu" />
       <img
         class="title-ironhack"
         src="./images/ironhack.png"
@@ -31,12 +31,16 @@
     <div id="game-container">
       <!-- <p>Score: <span id="score">0</span></p> -->
       <div id="game-screen">
-        <div id="monster"></div>
+        <img src="./images/backdrop-start.png" alt="backdrop game" />
       </div>
     </div>
 
     <div id="game-end">
       <!-- <button id="restart-button">Restart</button> -->
     </div>
+
+    <script type="text/javascript" src="./js/player.js"></script>
+    <script type="text/javascript" src="./js/game.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
   </body>
 </html>
