Added bamboo functionality

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <!-- <p>Score: <span id="score">0</span></p> -->
       <div id="game-screen">
         <img src="./images/backdrop-start.png" alt="backdrop game" />
+        <div id="bamboo-container"></div>
       </div>
     </div>
 
@@ -39,6 +40,7 @@
       <!-- <button id="restart-button">Restart</button> -->
     </div>
 
+    <script type="text/javascript" src="./js/bamboo.js"></script>
     <script type="text/javascript" src="./js/player.js"></script>
     <script type="text/javascript" src="./js/game.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
