Added score functionality

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <div id="game-screen">
         <img src="./images/backdrop-start.png" alt="backdrop game" />
         <div id="bamboo-container"></div>
+        <div id="score-container"><p>0</p></div>
       </div>
     </div>
 
