--- a/index.html
+++ b/index.html
@@ -29,20 +29,24 @@
     </div>
 
     <div id="game-container">
-      <!-- <p>Score: <span id="score">0</span></p> -->
       <div id="game-screen">
         <img src="./images/backdrop-start.png" alt="backdrop game" />
+        <div id="timer-container">
+          <div id="timer-bar"></div>
+        </div>
         <div id="bamboo-container"></div>
-        <div id="score-container"><p>0</p></div>
+        <div id="score-container"></div>
       </div>
     </div>
 
     <div id="game-end">
+      <img src="./images/end-screen.png" alt="end screen" />
       <!-- <button id="restart-button">Restart</button> -->
     </div>
 
     <script type="text/javascript" src="./js/bamboo.js"></script>
     <script type="text/javascript" src="./js/player.js"></script>
+    <script type="text/javascript" src="./js/timer.js"></script>
     <script type="text/javascript" src="./js/game.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
   </body>
