--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Ironhack Samurai</title>
   </head>
@@ -35,15 +42,22 @@
           <div id="timer-bar"></div>
         </div>
         <div id="bamboo-container"></div>
+        <div id="animation-container"></div>
         <div id="score-container"></div>
       </div>
     </div>
 
     <div id="game-end">
       <img src="./images/end-screen.png" alt="end screen" />
-      <!-- <button id="restart-button">Restart</button> -->
+      <div id="leaderboard">
+        <p>Final score: <span id="your-score"></span></p>
+        <p>Previous Highscore: <span id="highscore"></span></p>
+      </div>
+      <button id="restart-button"></button>
     </div>
-
+    <audio id="gameAudio" autoplay loop>
+      <source id="audioSource" src="" type="audio/mp3" />
+    </audio>
     <script type="text/javascript" src="./js/bamboo.js"></script>
     <script type="text/javascript" src="./js/player.js"></script>
     <script type="text/javascript" src="./js/timer.js"></script>
