Added timer bar animation

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <img src="./images/end-screen.png" alt="end screen" />
       <div id="leaderboard">
         <p>Final score: <span id="your-score"></span></p>
-        <p>Previous Highscore: <span id="highscore"></span></p>
+        <p>Highscore: <span id="highscore"></span></p>
       </div>
       <button id="restart-button"></button>
     </div>
