Changed game audio

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div id="game-end">
       <img src="./images/end-screen.png" alt="end screen" />
       <div id="leaderboard">
-        <p>Final score: <span id="your-score"></span></p>
         <p>Highscore: <span id="highscore"></span></p>
+        <p>Your score: <span id="your-score"></span></p>
       </div>
       <button id="restart-button"></button>
     </div>
